float_eq/tests/derive_tests/ulps_tol/ulps_tol_enum.stderr
error: FloatEqUlpsTol may only be derived for structs.
 --> $DIR/ulps_tol_enum.rs:4:6
  |
4 | enum SomeEnum {
  |      ^^^^^^^^
